--- a/BootS_Strap/index.html
+++ b/BootS_Strap/index.html
@@ -61,7 +61,7 @@
   <section class="container my-5">
     <div class="card shadow-lg border-0 rounded-4 overflow-hidden">
       <div class="card-body d-flex align-items-center">
-        <img src="https://via.placeholder.com/100" class="rounded-circle border border-primary border-3 me-4" alt="Profile">
+        <img src="assets/images/60111.jpg" class="rounded-circle border border-primary border-3 me-4" alt="Profile">
         <div>
           <h5 class="card-title mb-1">John Doe</h5>
           <p class="card-text text-muted">UI/UX Designer</p>
